# Monitoring_System

./: .env.example  .gitignore  APPLIANCE_DETECTION_GUIDE.md  CHAPTERS_6_7_TESTING_RESULTS.md  DEPLOYMENT_GUIDE.md  MYSQL_REALTIME_CAPTURE_GUIDE.md  README.md  TODO.md  TUYA_IP_CONFIGURATION_SUMMARY.md  TWILIO_SMS_ALERT_GUIDE.md  api.py  check_tuya_status.py  clear_mysql_and_setup_realtime.py  manage.py  pyproject.toml  requirements.txt  send_alert_sms.py  test_sms_functionality.py  test_tuya_connection.py  vercel.json
dashboard/: admin.py  appliance_detection.py  context_processors.py  forms.py  ip_utils.py  models.py  tariffs.py  tasks.py  tests.py  tuya_client.py  urls.py  utils.py  views.py
dashboard/fixtures/: appliances.json  usage_records.json
dashboard/management/commands/: add_test_usage.py  check_mysql_appliance.py  check_usage_alerts.py  compute_monthly_usage.py  (+4 more)
dashboard/migrations/: 0001_initial.py  0002_appliance_threshold_hours_alert.py  0003_appliance_is_critical_appliance_priority_level.py  0004_resident.py  0005_alert_alert_type.py  0006_alter_alert_appliance.py  0007_resident_is_default_resident_profile_name_and_more.py  0008_alert_email_sent.py  0009_resident_email_password.py  0010_add_appliance_resident.py  0011_monthlyapplianceusage.py  0012_alertconfirmation_and_more.py
household_electricity_dashboard/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
mysql/: create_triggers.sql
scripts/: check_mysql_appliance.py  create_test_appliance.py  list_residents.py  list_residents_sqlite.py  quick_check.py  test_mirror_appliance.py
(+27 files in other folders)
